--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -7,12 +7,12 @@
   <link rel="icon" href="/images/icon.png">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
- 
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  
-  
+
+
   <!-- CSS -->
-  <link rel="stylesheet" href="/css/sign.css" 
+  <link rel="stylesheet" href="/css/sign.css"
 
 
   <!-- Google Fonts -->
@@ -32,15 +32,15 @@
           <hr>
           <h1 class="login-heading">Sign In</h1>
           <br>
-          <form id="login">
+          <form id="login" action="/signin" method="POST">
             <label class="">Email Address: </label>
-            <input class="form-control" type="email" autocomplete="off" id="email"  />
+            <input class="form-control" type="email" autocomplete="off" name="email"  />
             <br>
             <label class="">Password: </label>
-            <input class="form-control" type="password" autocomplete="off" id="password" />
+            <input class="form-control" type="password" autocomplete="off" name="password" />
             <br>
-            <button class="button" type="submit"><a href="/home"> Sign In</button></a>
-            
+            <button class="button" type="submit">Sign In</button>
+
           </form>
         </div>
         <div class="col-lg-6">
@@ -49,7 +49,7 @@
       </div>
     </div>
   </section>
-  <script>
+  <!-- <script>
     const form = document.getElementById('login')
     form.addEventListener('submit', registerUser)
 
@@ -75,7 +75,7 @@
         alert(result.error);
       }
     }
-  </script>
+  </script> -->
 </body>
 
 </html>
